# pick-and-place-robot-arm

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arduinobot_bringup/share/ament_index/resource_index/package_run_dependencies/: arduinobot_bringup
install/arduinobot_bringup/share/arduinobot_bringup/: local_setup.sh  package.sh  package.xml
install/arduinobot_bringup/share/arduinobot_bringup/launch/: simulated_robot.launch.py
install/arduinobot_controller/lib/arduinobot_controller/: slider_control.py
install/arduinobot_controller/share/ament_index/resource_index/parent_prefix_path/: arduinobot_controller
install/arduinobot_controller/share/arduinobot_controller/: local_setup.sh  package.sh
install/arduinobot_description/share/arduinobot_description/: local_setup.sh  package.sh
install/arduinobot_description/share/arduinobot_description/urdf/: arduinobot_gazebo.xacro  arduinobot_ros2_control.xacro
install/arduinobot_description/share/arduinobot_description/worlds/: drink.sdf
install/arduinobot_moveit/share/ament_index/resource_index/package_run_dependencies/: arduinobot_moveit
install/arduinobot_moveit/share/arduinobot_moveit/: local_setup.sh  package.sh
install/arduinobot_moveit/share/arduinobot_moveit/config/: initial_positions.yaml  joint_limits.yaml
install/arduinobot_moveit/share/arduinobot_moveit/launch/: moveit.launch.py
install/arduinobot_msgs/include/arduinobot_msgs/arduinobot_msgs/action/detail/: arduinobot_task__builder.hpp  arduinobot_task__description.c  arduinobot_task__functions.c  arduinobot_task__type_support.c  arduinobot_task__type_support.cpp
install/arduinobot_msgs/share/ament_index/resource_index/rosidl_interfaces/: arduinobot_msgs
install/arduinobot_msgs/share/arduinobot_msgs/: package.sh  package.xml
install/arduinobot_python/lib/arduinobot_python/: camera_node  yolo_node
install/arduinobot_python/share/arduinobot_python/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arduinobot_remote/lib/arduinobot_remote/: task_server.py  task_server_ik_node  task_server_node
install/arduinobot_remote/share/ament_index/resource_index/parent_prefix_path/: arduinobot_remote
install/arduinobot_remote/share/ament_index/resource_index/rclcpp_components/: arduinobot_remote
install/arduinobot_remote/share/arduinobot_remote/: package.dsv  package.ps1  package.sh  package.xml
install/arduinobot_remote/share/arduinobot_remote/launch/: grap.launch.py
log/: latest_build  latest_list
src/UI/: drink_selector.py  drink_selector_window.py  drink_selector_window.ui
src/arduinobot_controller/config/: arduinobot_controllers.yaml
src/arduinobot_controller/src/: slider_control.cpp
src/arduinobot_description/: CMakeLists.txt
src/arduinobot_description/launch/: gazebo.launch.py
src/arduinobot_description/urdf/: arduinobot.urdf.xacro
src/arduinobot_description/worlds/: drink2.sdf
src/arduinobot_moveit/config/: arduinobot.srdf  moveit_controllers.yaml  planning_python_api.yaml
src/arduinobot_msgs/: CMakeLists.txt
src/arduinobot_python/: setup.cfg  setup.py
src/arduinobot_python/arduinobot_python/: camera_node.py
src/arduinobot_remote/: CMakeLists.txt
src/arduinobot_remote/launch/: remote_interface.launch.py
src/arduinobot_remote/src/: task_server.cpp  task_server_backup.cpp  task_server_ik.cpp
