<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arduinobot_remote</name>
  <version>0.0.0</version>
  <description>The arduinobot_remote package</description>
  <maintainer email="yoga-slim-pro-2@todo.todo">yoga-slim-pro-2</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>arduinobot_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <!-- <depend>moveit_commander</depend> -->
  <depend>rclpy</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_task_constructor_msgs</depend>

  <exec_depend>ament_index_cpp</exec_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <!-- <exec_depend condition="$ROS_DISTRO >= iron">moveit_py</exec_depend> -->
  <exec_depend>arduinobot_moveit</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
